--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 certifi==2023.7.22
 charset-normalizer==3.3.1
+cloudpickle==3.0.0
 contourpy==1.1.1
 cycler==0.12.1
 filelock==3.12.4
 fonttools==4.43.1
 fsspec==2023.10.0
+gym==0.26.2
+gym-notices==0.0.8
 idna==3.4
 Jinja2==3.1.2
 kiwisolver==1.4.5
