Add: [core] inheritance theta_k

--- a/repapr-ppo/config_sample.toml
+++ b/repapr-ppo/config_sample.toml
@@ -12,6 +12,7 @@ manual = ""
 re_model = "USo_v1"
 
 [addproc] # 追加処理
+inheritance_theta_k = false
 load_data = false
 overwrite = false
 rt_graph = true
