Fix: [core] inheritance_reset and more...

--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,9 @@ venv
 
 tmp
 plots
+backup
 repapr-ppo/out/data/miss_max/
-repapr-ppo/out/ppo/
-repapr-ppo/out/data/
+repapr-ppo/out/*
 
 config.toml
 
