--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,34 @@
-certifi==2023.7.22
-charset-normalizer==3.3.1
+certifi==2022.12.7
+charset-normalizer==2.1.1
 cloudpickle==3.0.0
-contourpy==1.1.1
+contourpy==1.2.0
 cycler==0.12.1
-filelock==3.12.4
-fonttools==4.43.1
-fsspec==2023.10.0
-gym==0.26.2
-gym-notices==0.0.8
+Farama-Notifications==0.0.4
+filelock==3.9.0
+fonttools==4.47.2
+fsspec==2023.4.0
+gymnasium==0.29.1
 idna==3.4
 Jinja2==3.1.2
 kiwisolver==1.4.5
 MarkupSafe==2.1.3
-matplotlib==3.8.0
+matplotlib==3.8.2
 mpmath==1.3.0
-networkx==3.2
-numpy==1.26.1
+networkx==3.0
+numpy==1.26.3
 packaging==23.2
-pandas==2.1.2
-Pillow==10.1.0
+pandas==2.2.0
+Pillow==9.3.0
 pyparsing==3.1.1
 python-dateutil==2.8.2
 pytz==2023.3.post1
-requests==2.31.0
-scipy==1.11.3
+requests==2.28.1
+scipy==1.12.0
 six==1.16.0
 sympy==1.12
-torch==2.1.0
-torchaudio==2.1.0
-torchvision==0.16.0
-typing_extensions==4.8.0
-tzdata==2023.3
-urllib3==2.0.7
+torch==2.1.2+cpu
+torchaudio==2.1.2+cpu
+torchvision==0.16.2+cpu
+typing_extensions==4.9.0
+tzdata==2023.4
+urllib3==1.26.13
