--- a/requirements.txt
+++ b/requirements.txt
@@ -26,9 +26,9 @@ requests==2.28.1
 scipy==1.12.0
 six==1.16.0
 sympy==1.12
-torch==2.1.2+cpu
-torchaudio==2.1.2+cpu
-torchvision==0.16.2+cpu
+torch==2.1.2
+torchaudio==2.1.2
+torchvision==0.16.2
 typing_extensions==4.9.0
 tzdata==2023.4
 urllib3==1.26.13
